--- a/app/popup.html
+++ b/app/popup.html
@@ -11,8 +11,10 @@
     <!-- endbuild -->
   </head>
   <body>
-    <h1>'Allo, 'Allo!</h1>
+    <h1>Popup</h1>
+    <div id="debug">
 
+    </div>
     <!-- build:js scripts/popup-vendor.js -->
     <!-- bower:js -->
     <!-- endbower -->
